Separate compatibility test executions in test-coverage profile