@@ -400,10 +400,41 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>${maven.surefire.plugin.version}</version>
-                        <configuration combine.self="override">
-                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                            <testFailureIgnore>true</testFailureIgnore>
-                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration combine.self="override">
+                                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                                    <testFailureIgnore>true</testFailureIgnore>
+                                    <excludedGroups>com.hazelcast.test.annotation.CompatibilityTest</excludedGroups>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>compatibility-test</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration combine.self="override">
+                                    <argLine>
+                                        -Xms128m -Xmx2G -XX:MaxPermSize=1024M
+                                        -Dhazelcast.operation.thread.count=16
+                                        -Dhazelcast.hidensity.check.freememory=false
+                                        -Dhazelcast.phone.home.enabled=false
+                                        -Dhazelcast.mancenter.enabled=false
+                                        -Dhazelcast.logging.type=none
+                                        -Dhazelcast.test.compatibility=true
+                                    </argLine>
+                                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                                    <testFailureIgnore>true</testFailureIgnore>
+                                    <groups>com.hazelcast.test.annotation.CompatibilityTest</groups>
+                                </configuration>
+                            </execution>
+                        </executions>
                         <dependencies>
                             <dependency>
                                 <groupId>com.github.jerrinot.maven-surefire</groupId>
